	used in the Event marshaling. Add documentation.

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: use Gtk.Keys.KeyVal for
	the Keyval rather than Integer.

	* gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: use Word32 for timestamps
	rather than Integer.

	* gtk/Graphics/UI/Gtk/Display/Label.chs.pp: use KeyVal imported from
	Gtk.Keys module rather than local definition.

2005-10-17 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/Events.hsc,
	gtk/Graphics/UI/Gtk/General/Enums.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Menu.chs.pp: Qualify all
	field names of Event, rename Button enumeration to MouseButton. 
	This change breaks code, but avoids many annoying name clashes. In
	particular Events doesn't have to be imported qualified anymore.
	
	* gtk/Graphics/UI/Gtk.hs, gtk/Graphics/UI/Gtk/Cairo.chs.pp: Export
	all Cairo drawing primitives, remove the primitive to draw a Gtk
	Rectangle.

	* gtk/Graphics/UI/Gtk/General/Structs.hsc,
	gtk/Graphics/UI/Gtk/Pango/Context.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Font.chs,
	gtk/Graphics/UI/Gtk/Pango/Layout.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Rendering.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Types.chs.pp: Added Tab Stops (on the
	fly). Move FontMetrics into the Type module and added a new
	function to query the font metrics for a PangoItem. Added a new
	accessor function in Structs.hsc to get at the language of a
	PangoItem.
	
2005-10-17 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/FFI.hs: fix typo in withArrayLen #ifdef stuff.

	* configure.ac: fix for ./configure --disable-mozilla --enable-firefox

	* tools/c2hs/gen/GenBind.hs: use "with" rather than "withObject". This
	fixes deprecation warning when building cairo.

2005-10-16 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, gtk/Graphics/UI/Gtk.hs,
	gtk/Graphics/UI/Gtk/Pango/Context.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Font.chs: Added new files to make the